Make some fixes to the calendar legend to be sure text added for accessibility stays invisible in all themes.

--- a/calendar.css
+++ b/calendar.css
@@ -192,26 +192,28 @@ table .mini-day-on a {
   }
 
 /* formatting for the legend stripe and block */
-.calendar .stripe {
+.calendar-calendar .stripe {
   height: 5px;
   width: 96%;
   font-size:1px !important;
   line-height:1px !important;
 }
-.calendar .legend .stripe {
-  height:12px;
-  font-size:9px !important;
-  line-height:10px !important;
+.calendar-calendar .day-view .stripe {
+  width:100%;
 }
- .legend table {
+table.calendar-legend {
+  background-color:#ccc;
   width:100%;
   margin:0;
   padding:0;
 }
-table th.legend {
-  background-color:#ccc;
+table.calendar-legend tr.odd .stripe,
+table.calendar-legend tr.even .stripe {
+  height:12px !important;
+  font-size:9px !important;
+  line-height:10px !important;
 }
-.legend td {
+.calendar-legend td {
   text-align:left;
 }
 
